feat: filepush 连接复用、微信内存还原补全与视频检索重构
filepush（两独立 JVM 实测）
- 客户端新增 filesPerConnection 连接复用（一连接多文件），省掉每文件的建连+握手+收尾往返：
  4000x4KB 1.25x、8x32MB 1.38x；默认 1，保持既有行为
- 修服务端用自身 chunkSize 校验客户端分片长度、异常路径 chunksDone.await() 永久阻塞
- 分片缓冲改为连接内跨文件复用；文件读缓冲按文件大小收敛
- 新增 FilePushConnectionReuseTest（11 项断言）

wechat-restore
- 补齐 sqlcipher / jdbc / keyscan / memory 四个包及对应测试
- AbstractDataRestore 放开目录源（子类可重写 restore 后走 doRestore），
  新增 WechatDataRestoreDirectorySourceTest

core
- RagPipeline 新增分块内容缓存：jvector ON_DISK 不返回 metadata.content 时按 chunkId 回读原文
- PageResult / Json / ReflectUtils / BeanUtils / ClassUtils / StringUtils 调整

deeplearning
- 新增 MiganInpaintingTranslator（ONNX 图像修复）

datasearch
- 视频资源提供者重构（Quark / QuarkTV / IKanTV / 木偶 / 短剧网等）
- 新增 skill / agent / usage 实现与 META-INF/services 注册

filesystem
- IbdDataRestore 完善（目录源、异常与进度处理）